# rm65_vision_grasping

./: .gitignore  README.md  THIRD_PARTY.md
config/: hand_eye_calibration.yaml
config/moveit/: real_moveit_demo_6f.launch.py  rm_65_description.srdf
config/robot_model/: rm65_hand_attachment.xacro
docs/: problem_solving.md  robotics_notes.md  technical_details.md
scripts/: doctor.sh
src/custom_grasp_pke/: package.xml  setup.cfg  setup.py
src/custom_grasp_pke/custom_grasp_pke/: grasp_control_node.py  vision_tf_node.py
src/custom_grasp_pke/launch/: vision_grasp.launch.py
